# sig-lang

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  REFACTORING_NOTES.md  build.sh  compiler  hello  hello.sg  install.sh  makefile  out.asm  test.asm  test.sg  uninstall.sh
docs/: API_REFERENCE.md  CONTRIBUTING.md  LANGUAGE_GUIDE.md  NO_STD_FEATURE.md  TUTORIAL.md
examples/: README.md  arithmetic_test.sg  bool_test.sg  builtin_print_test.sg  builtin_test.sg  builtin_vars_test.sg  comparison_test.sg  comprehensive.sg  final_builtin_test.sg  fixed_types_test.sg  float_test.sg  for_loop.sg  function_params_test.sg  functions.sg  hello_world.sg  hex_literals_test.sg  input_minimal_test.sg  input_test.sg  int_function_test.sg  logical_test.sg  minimal_builtin_test.sg  mod_example.sg  mod_example_file.sg  param_validation_test.sg  simple_arithmetic.sg  simple_builtin.sg  simple_comparison.sg  simple_function_test.sg  simple_logical.sg  simple_test.sg  struct_test.sg  variables.sg  vga_struct_test.sg  working_comparison.sg
src/: args.cpp  args.hpp  main.cpp
src/ast/public/: ast.hpp  ast.hpp.backup  ast_simple.hpp
src/codegen/legacy/: context.cpp  context.hpp  optimization.cpp  optimization.hpp  rtl.hpp  templates.cpp  templates.hpp
src/codegen/private/: code_generator.cpp  codegen.cpp  context.cpp  context.hpp  jit_executor.cpp  legacy_stubs.cpp  llvm_codegen.cpp  object_generator.cpp  register_alloc.cpp  register_alloc.hpp  rtl.hpp  runtime_setup.cpp  templates.cpp
src/codegen/public/: codegen.hpp  llvm_codegen.hpp
src/codegen/utils/: utils.cpp  utils.hpp
src/lexer/private/: lexer.cpp  lexer_core.cpp  lexer_core.hpp  lexer_helpers.cpp  lexer_helpers.hpp  token.cpp
src/lexer/public/: lexer.hpp  token.hpp
src/modules/private/: module_resolver.cpp
src/modules/public/: module_resolver.hpp
src/parser/private/: parser.cpp  parser_base.cpp  parser_base.hpp  parser_control_flow.cpp  parser_expressions.cpp  parser_expressions.hpp  parser_functions.cpp  parser_statements.cpp  parser_statements.hpp  parser_structs.cpp
src/parser/public/: parser.hpp
src/runtime/: builtin_functions.cpp
